Simplify imports and assertions across demos and tests. Improve consistency by restructuring static imports and replacing verbose assertions with concise alternatives.